cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  latestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

  myKeyPair:
    Description: Choose your key pair
    Type: AWS::EC2::KeyPair::KeyName

  myInstanceType:
    Description: Choose your instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano
  
Resources: 
  
  cevdetKittensInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref latestAmiId
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyPair
      SecurityGroupIds: 
        - !Ref cevdetSecurityGroup
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install httpd -y
        systemctl start httpd
        systemctl enable httpd
        cd /var/www/html
        FOLDER="https://raw.githubusercontent.com/cevdet25/aws-kitten-101-ec2/refs/heads/main/static-web"
        wget ${FOLDER}/index.html
        wget ${FOLDER}/cat0.jpg
        wget ${FOLDER}/cat1.jpg
        wget ${FOLDER}/cat2.jpg

  
  cevdetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: cevdet-kittens
        - Key: Cohort
          Value: 19
    

Outputs:
  webSiteURL:
    Description: IP of website
    Value: !Sub
      - http://${publicIP}
      - publicIP: !GetAtt cevdetKittensInstance.PublicIp
